更新到最新的配置文件

--- a/richinfo-biz-attendance/MyConfigDirTest/attendance.properties
+++ b/richinfo-biz-attendance/MyConfigDirTest/attendance.properties
@@ -1,22 +1,34 @@
 ##\u5355\u70B9\u767B\u5F55\u9274\u6743\u5730\u5740
-##attend.validArtifact.url=http://121.15.167.251:10010/UmcWeb/s?func=ArtifactCheckRequest
+#attend.validArtifact.url=http://121.15.167.251:10010/UmcWeb/s?func=ArtifactCheckRequest
 attend.validArtifact.url=http://auth.cmpassport.com:6500/UmcWeb/s?func=ArtifactCheckRequest
 ##\u767B\u5F55\u6210\u529F\u8DF3\u8F6C\u5730\u5740
-attend.login.successUrl=http://reportapproval.vipgz1.idcfengye.com/s/rcskq/satdc/rcs/index.html
+attend.login.successUrl=https://f.10086.cn/s/rcskq/satdc/rcs/index.html
 ##\u767B\u5F55\u5931\u8D25\u8DF3\u8F6C\u5730\u5740
-attend.login.failUrl=http://reportapproval.vipgz1.idcfengye.com/s/rcskq/satdc/rcs/authFail.html
+attend.login.failUrl=https://f.10086.cn/s/rcskq/satdc/rcs/authFail.html
+##\u77ED\u4FE1\u6253\u5361\u8DF3\u8F6C\u5730\u5740
+attend.sms.clock.Url=https://f.10086.cn/s/rcskq/satdc/rcs/index.html
+##sms\u767B\u5F55\u624B\u673A\u53F7\u89E3\u5BC6\u79D8\u94A5
+attend.sms.token.phone.secret=hHMogstx1gcJQLcu
 ##\u767B\u5F55\u4F1A\u8BDD\u7F13\u5B58\u65F6\u95F4
 attend.user.cacheTime=7200000
 ##UMC\u767B\u5F55\u9274\u6743\u5730\u5740
 #attend.umc.url=https://wap.cmpassport.com:8443/api/tokenValidate
 ##RCS\u7BA1\u7406\u5458\u6821\u9A8C\u63A5\u53E3\u5730\u5740
-attend.rcs.checkadmin.url=http://117.136.240.59/rcsoa_receive/validate/isAdmin.do
+#attend.rcs.checkadmin.url=http://117.136.240.59/rcsoa_receive/validate/isAdmin.do
+
+##pc\u83B7\u53D6\u51ED\u8BC1\u767B\u9646\u901A\u8BAF\u5F55
+#attend.getArtifact.url=http://121.15.167.251:10010/UmcWeb/s?func=GetArtifactRequest
 
 # \u83B7\u53D6\u5DF2\u7ECF\u914D\u7F6E\u8282\u5047\u65E5\u4FE1\u606F\u7684\u5E74\u4EFD\uFF0C\u591A\u4E2A\u5E74\u4EFD\uFF0C\u9017\u53F7(,)\u5206\u9694\uFF0C\u683C\u5F0FYYYY
-calender.config.year=2017,2018
+calender.config.year=2017,2018,2019
 
 # \u83B7\u53D6\u5373\u5C06\u4FDD\u5B58\u7684\u65E5\u5386\u4FE1\u606F\u7684\u5E74\u4EFD\uFF0C\u5355\u4E2A\u5E74\u4EFD\uFF0C\u683C\u5F0FYYYY
-calender.save.year=2018
+calender.save.year=2019
+attendance.rcs.consumerKey=101
+attendance.rcs.consumerSecret=0d324f614e88ebb4ab6c6b87b8f7cc0a
+attendance.rcs.appId=92
+attendance.rcs.appSecret=k5x369ato282pl8XfEUh8NQHNu7k549N
+attendance.rcs.accessNo=125600400000053
 
 # \u83B7\u53D6\u8BE5\u5E74\u4EFD\u5468\u672B\u7684\u65E5\u671F\u5217\u8868\uFF0C\u6392\u9664\u4E0E\u8282\u5047\u65E5\u91CD\u590D\u7684\u5468\u672B\u3002eg:2017-06-10,2017-06-11
 calender.weekend.2017=2017-01-07,2017-01-08,2017-01-14,2017-01-15,2017-01-21,2017-01-22,2017-02-04,2017-02-05,2017-02-11,2017-02-12,2017-02-18,2017-02-19,2017-02-25,2017-02-26,2017-03-04,2017-03-05,2017-03-11,2017-03-12,2017-03-18,2017-03-19,2017-03-25,2017-03-26,2017-04-08,2017-04-09,2017-04-15,2017-04-16,2017-04-22,2017-04-23,2017-05-06,2017-05-07,2017-05-13,2017-05-14,2017-05-20,2017-05-21,2017-06-03,2017-06-04,2017-06-10,2017-06-11,2017-06-17,2017-06-18,2017-06-24,2017-06-25,2017-07-01,2017-07-02,2017-07-08,2017-07-09,2017-07-15,2017-07-16,2017-07-22,2017-07-23,2017-07-29,2017-07-30,2017-08-05,2017-08-06,2017-08-12,2017-08-13,2017-08-26,2017-08-27,2017-09-02,2017-09-03,2017-09-09,2017-09-10,2017-09-16,2017-09-17,2017-09-23,2017-09-24,2017-10-14,2017-10-15,2017-10-21,2017-10-22,2017-10-28,2017-10-29,2017-11-04,2017-11-05,2017-11-11,2017-11-12,2017-11-18,2017-11-19,2017-11-25,2017-11-26,2017-12-02,2017-12-03,2017-12-09,2017-12-10,2017-12-16,2017-12-17,2017-12-23,2017-12-24,2017-12-30,2017-12-31
@@ -30,11 +42,17 @@ calender.holiday.2018=2018-01-01:\u5143\u65E6,2018-02-15:\u9664\u5915,2018-02-16
 #2018\u5E74\u4EFD\u5468\u672B\u7684\u65E5\u671F\u5217\u8868\uFF0C\u6392\u9664\u4E0E\u8282\u5047\u65E5\u91CD\u590D\u7684\u5468\u672B\u3002eg:2018-01-06,2018-01-07
 calender.weekend.2018=2018-01-06,2018-01-07,2018-01-13,2018-01-14,2018-01-20,2018-01-21,2018-01-27,2018-01-28,2018-02-03,2018-02-04,2018-02-10,2018-02-25,2018-03-03,2018-03-04,2018-03-10,2018-03-11,2018-03-17,2018-03-18,2018-03-24,2018-03-25,2018-03-31,2018-04-01,2018-04-14,2018-04-15,2018-04-21,2018-04-22,2018-05-05,2018-05-06,2018-05-12,2018-05-13,2018-05-19,2018-05-20,2018-05-26,2018-05-27,2018-06-02,2018-06-03,2018-06-09,2018-06-10,2018-06-23,2018-06-24,2018-06-30,2018-07-01,2018-07-07,2018-07-08,2018-07-14,2018-07-15,2018-07-21,2018-07-22,2018-07-28,2018-07-29,2018-08-04,2018-08-05,2018-08-11,2018-08-12,2018-08-18,2018-08-19,2018-08-25,2018-08-26,2018-09-01,2018-09-02,2018-09-08,2018-09-09,2018-09-15,2018-09-16,2018-10-13,2018-10-14,2018-10-20,2018-10-21,2018-10-27,2018-10-28,2018-11-03,2018-11-04,2018-11-10,2018-11-11,2018-11-17,2018-11-18,2018-11-24,2018-11-25,2018-12-01,2018-12-02,2018-12-08,2018-12-09,2018-12-15,2018-12-16,2018-12-22,2018-12-23,2018-12-29,2018-12-30
 
+#2019\u5E74\u6CD5\u5B9A\u8282\u5047\u65E5\u7684 \u65E5\u671F-\u5047\u65E5 \u5217\u8868\uFF0C\u9017\u53F7(,)\u5206\u9694\u3002eg:2019-01-01:\u5143\u65E6,2019-02-04:\u9664\u5915
+calender.holiday.2019=2019-01-01:\u5143\u65E6,2019-02-04:\u9664\u5915,2019-02-05:\u6625\u8282,2019-02-06:\u6625\u8282,2019-02-07:\u6625\u8282,2019-02-08:\u6625\u8282,2019-02-09:\u6625\u8282,2019-02-10:\u6625\u8282,2019-04-05:\u6E05\u660E\u8282,2019-04-06:\u6E05\u660E\u8282,2019-04-07:\u6E05\u660E\u8282,2019-04-29:\u52B3\u52A8\u8282,2019-04-30:\u52B3\u52A8\u8282,2019-05-01:\u52B3\u52A8\u8282,2019-06-07:\u7AEF\u5348\u8282,2019-06-08:\u7AEF\u5348\u8282,2019-06-09:\u7AEF\u5348\u8282,2019-09-13:\u4E2D\u79CB\u8282,2019-09-14:\u4E2D\u79CB\u8282,2019-09-15:\u4E2D\u79CB\u8282,2019-10-01:\u56FD\u5E86\u8282,2019-10-02:\u56FD\u5E86\u8282,2019-10-03:\u56FD\u5E86\u8282,2019-10-04:\u56FD\u5E86\u8282,2019-10-05:\u56FD\u5E86\u8282,2019-10-06:\u56FD\u5E86\u8282,2019-10-07:\u56FD\u5E86\u8282
+
+#2019\u5E74\u4EFD\u5468\u672B\u7684\u65E5\u671F\u5217\u8868\uFF0C\u6392\u9664\u4E0E\u8282\u5047\u65E5\u91CD\u590D\u7684\u5468\u672B\u3002
+calender.weekend.2019=2019-01-05,2019-01-06,2019-01-12,2019-01-13,2019-01-19,2019-01-20,2019-01-26,2019-01-27,2019-02-16,2019-02-17,2019-02-23,2019-02-24,2019-03-02,2019-03-03,2019-03-09,2019-03-10,2019-03-16,2019-03-17,2019-03-23,2019-03-24,2019-03-30,2019-03-31,2019-04-13,2019-04-14,2019-04-20,2019-04-21,2019-05-04,2019-05-05,2019-05-11,2019-05-12,2019-05-18,2019-05-19,2019-05-25,2019-05-26,2019-06-01,2019-06-02,2019-06-15,2019-06-16,2019-06-22,2019-06-23,2019-06-29,2019-06-30,2019-07-06,2019-07-07,2019-07-13,2019-07-14,2019-07-20,2019-07-21,2019-07-27,2019-07-28,2019-08-03,2019-08-04,2019-08-10,2019-08-11,2019-08-17,2019-08-18,2019-08-24,2019-08-25,2019-08-31,2019-09-01,2019-09-07,2019-09-08,2019-09-21,2019-09-22,2019-09-28,2019-10-13,2019-10-19,2019-10-20,2019-10-26,2019-10-27,2019-11-02,2019-11-03,2019-11-09,2019-11-10,2019-11-16,2019-11-17,2019-11-23,2019-11-24,2019-11-30,2019-12-01,2019-12-07,2019-12-08,2019-12-14,2019-12-15,2019-12-21,2019-12-22,2019-12-28,2019-12-29
+
 #2019\u5E74\u6CD5\u5B9A\u8282\u5047\u65E5\u8865\u73ED\u65E5\u671F\u5217\u8868
-calender.rowday.2019 = 2019-02-02,2019-02-03,2019-04-27,2019-04-28,2019-09-29,2019-10-12
+calender.rowday.2019=2019-02-02,2019-02-03,2019-09-29,2019-10-12,2019-01-24,2019-01-27,2019-01-26
 
 # \u5224\u65AD\u975E\u5DE5\u4F5C\u65E5\u662F\u5426\u4F7F\u7528\u9ED8\u8BA4\u7684\u5907\u6CE8\u63CF\u8FF0\u30020\uFF1A\u4E0D\u4F7F\u7528\uFF1B1\uFF1A\u4F7F\u7528
-calender.restday.default.remark=1
+calender.restday.default.remark=0
 
 # \u6267\u884C\u5B9A\u65F6\u4EFB\u52A1\u7684\u673A\u5668\u3002\u9ED8\u8BA4\u503C\u4E3A0\uFF0C\u4E0D\u6267\u884C\uFF1B\u5B9A\u65F6\u4EFB\u52A1\u673A\u5668\uFF0C\u914D\u503C\u4E3A1\uFF0C\u4EC5\u4E00\u53F0\u673A\u5668\u9700\u914D\u7F6E
 attendance.task.server=1
@@ -42,21 +60,62 @@ attendance.task.server=1
 # id list
 attendance.eid.list=,483460,36301,508661,514165,7347117,
 ##\u62A5\u8868\u5BFC\u51FA\u6587\u4EF6\u4E34\u65F6\u5B58\u50A8\u8DEF\u5F84
-attend.export.file.dir=/home/RCS/exportTempFile/
+attend.export.file.dir=/data/rcs/appsys/exportTempFile/
 ##\u8003\u52E4\u8F6F\u786C\u7ED3\u5408\u5E94\u7528\u8054\u8C03\u6D4B\u8BD5\u4F01\u4E1Akey
 attend.hardkey.483460=97d99d8143744510a8f468ebb1d63c22
 
 #rcs PC\u7AEF\u7BA1\u7406\u540E\u53F0\u9274\u6743\u5931\u8D25\u9875\u9762\u5730\u5740
-attend.login.pcFailUrl=http://reportapproval.vipgz1.idcfengye.com/s/rcskq/satdc/rcspc/html/Failure_of_authentication.html
+attend.login.pcFailUrl=https://f.10086.cn/s/rcskq/satdc/rcspc/html/Failure_of_authentication.html
 #rcs PC\u7AEF\u7BA1\u7406\u540E\u53F0\u9274\u6743\u6210\u529F\u8DF3\u8F6C\u9875\u9762\u5730\u5740
-attend.login.pcSuccessUrl=http://reportapproval.vipgz1.idcfengye.com/s/rcskq/satdc/rcspc/html/attend_stats.html
+#attend.login.pcSuccessUrl=http://f.10086.cn/s/rcskq/satdc/rcspc/html/attend_stats.html
+attend.login.pcSuccessUrl=https://f.10086.cn/s/rcskq/satdc/rcspc/html/attend_detail.html
 
 #\u83B7\u53D6\u6587\u4EF6\u4E0B\u8F7D\u4E34\u65F6\u57FA\u7840\u76EE\u5F55
-attend.download.file.dir=/home/RCS/downLoadTempFile/
+attend.download.file.dir=/data/rcs/appsys/downLoadTempFile/
 
 #\u83B7\u53D6\u6587\u4EF6\u4E0B\u8F7D\u63A5\u53E3\u670D\u52A1\u7684URL\u5730\u5740
-attend.download.serverUrl=http://reportapproval.vipgz1.idcfengye.com/s/rcskq/atdc/downLoad/downLoadAttendRept?
+attend.download.serverUrl=https://f.10086.cn/s/rcskq/atdc/downLoad/downLoadAttendRept?
 
 #\u83B7\u53D6\u6BCF\u6B21\u6279\u91CF\u751F\u6210\u7684\u5F85\u53D1\u6D88\u606F\u6570\uFF08\u9ED8\u8BA4100\uFF09
 attendance.generate.msg.splitSize=100
 
+#\u63A8\u9001\u7684\u8BA4\u8BC1\u9875\u9762
+attendance.rcs.msg.details.pageurl= https://f.10086.cn/s/rcskq/atdc/login/ssoAttendance
+#\u5BA1\u6279\u6D88\u606F\u63A8\u9001\u8DF3\u8F6Curl
+attend.login.approveUrl = https://f.10086.cn/s/rcskq/satdc/rcs/index.html#/exceptionAppealDetail
+#\u56E2\u961F\u65E5\u62A5\u6D88\u606F\u63A8\u9001\u8DF3\u8F6Curl
+attend.login.dailyUrl = https://f.10086.cn/s/rcskq/satdc/rcs/index.html#/statistics
+#\u7EDF\u8BA1\u7EBF\u7A0B\u6570
+attendance.statistics.threaded.number = 20
+
+#\u83B7\u53D6\u521B\u65B0\u5E73\u53F0\u6D88\u606Ftoken\u7533\u8BF7\u63A5\u53E3\u7684\u8C03\u7528\u5730\u5740
+attendance.rcs.msg.accessToken.url=http://120.196.212.5/rcsoaplus-gateway/message/token		           
+#\u83B7\u53D6\u521B\u65B0\u5E73\u53F0\u6D88\u606F\u63A8\u9001\u63A5\u53E3\u7684\u8C03\u7528\u5730\u5740
+attendance.rcs.msg.send.url=http://120.196.212.5/rcsoaplus-gateway/message/sendByEuserId
+#\u83B7\u53D6\u6D88\u606F\u8DF3\u8F6C\u8BE6\u60C5\u9875\u5730\u5740
+#attendance.rcs.msg.details.pageurl=http://120.197.235.114/atdc/login/ssoAttendance
+#attend.smtp.server=smtp.163.com
+#attend.sendMail.from=zfq0816@163.com
+#attend.sendMail.user=zfq0816@163.com
+#attend.sendMail.pwd=zfq15016629733
+
+#\u8003\u52E4\u6253\u5361\u5BFC\u51FA\u884C\u6570\u9650\u5236
+attend.maxExportCount=60000
+
+#\u6CE8\u518C\u4F01\u4E1A\u901A\u8BAF\u5F55\u56DE\u8C03
+attend.qytxl.callbackUrl=https://f.10086.cn/s/rcskq/atdc/sync/getRegisterCallBackInfo
+
+#\u751F\u4EA7
+attend.qytxl.appid=d7eec29775ca42a894ab3ce432667e70
+attend.qytxl.appkey=ca7dc22b57fa45a7a6a8eb89a3dc7b49
+attend.qytxl.aes_key=ca7dc22b57fa45a7
+
+#\u6D4B\u8BD5
+#attend.qytxl.appid=2b5aa5bbace54212b5036640db943db0
+#attend.qytxl.appkey=258e5059518c4f56a56658d7172d29c5
+#attend.qytxl.aes_key=258e5059518c4f56
+
+#qytxl.department.staff.url=https://open1.cytxl.com.cn/enterprise/getDetail.json
+#\u6253\u5361\u63D0\u9192
+#attendance.hfx.msg.remindTime= 10 * 60 * 1000L
+msg.pull.type=\u6D4B\u8BD5--
