--- a/richinfo-biz-attendance/rh-attendanceweb/src/main/resources/local.properties
+++ b/richinfo-biz-attendance/rh-attendanceweb/src/main/resources/local.properties
@@ -1,8 +1,11 @@
-#configdir=/MyConfigDir
-configdir=C:\\javaDev\\idea_repository\\richinfo-biz-attendance-modajun-based-on-equitment\\richinfo-biz-attendance\\MyConfigDirTest
-#configdir=/data/rcs/appsys/attendcfg/
-#configdir=/home/RCS/attendcfg
+# \u672C\u5730
+configdir=C:\\javaDev\\idea_repository\\richinfo-biz-attendance-syn\\source\\richinfo-biz-attendance\\MyConfigDirTest
 is_use_db=1
-sms_clock_url = ttps://120.196.212.78:8080/satdc/rcs/index.html
+#sms_clock_url = ttps://120.196.212.78:8080/satdc/rcs/index.html
+
+# \u6D4B\u8BD5
+#configdir=/data/rcs/appsys/attendcfg/
+#is_use_db=1
+
 
 
