更新通讯录相关参数的叫法，使我们这边的叫法跟通讯那边的叫法一致

--- a/richinfo-biz-attendance/MyConfigDirTest/attendance.properties
+++ b/richinfo-biz-attendance/MyConfigDirTest/attendance.properties
@@ -2,11 +2,11 @@
 #attend.validArtifact.url=http://121.15.167.251:10010/UmcWeb/s?func=ArtifactCheckRequest
 attend.validArtifact.url=http://auth.cmpassport.com:6500/UmcWeb/s?func=ArtifactCheckRequest
 ##\u767B\u5F55\u6210\u529F\u8DF3\u8F6C\u5730\u5740
-attend.login.successUrl=https://f.10086.cn/s/rcskq/satdc/rcs/index.html
+attend.login.successUrl=http://reportapproval.vipgz1.idcfengye.com/s/rcskq/satdc/rcs/index.html
 ##\u767B\u5F55\u5931\u8D25\u8DF3\u8F6C\u5730\u5740
-attend.login.failUrl=https://f.10086.cn/s/rcskq/satdc/rcs/authFail.html
+attend.login.failUrl=http://reportapproval.vipgz1.idcfengye.com/s/rcskq/satdc/rcs/authFail.html
 ##\u77ED\u4FE1\u6253\u5361\u8DF3\u8F6C\u5730\u5740
-attend.sms.clock.Url=https://f.10086.cn/s/rcskq/satdc/rcs/index.html
+attend.sms.clock.Url=http://reportapproval.vipgz1.idcfengye.com/s/rcskq/satdc/rcs/index.html
 ##sms\u767B\u5F55\u624B\u673A\u53F7\u89E3\u5BC6\u79D8\u94A5
 attend.sms.token.phone.secret=hHMogstx1gcJQLcu
 ##\u767B\u5F55\u4F1A\u8BDD\u7F13\u5B58\u65F6\u95F4
@@ -65,26 +65,26 @@ attend.export.file.dir=/data/rcs/appsys/exportTempFile/
 attend.hardkey.483460=97d99d8143744510a8f468ebb1d63c22
 
 #rcs PC\u7AEF\u7BA1\u7406\u540E\u53F0\u9274\u6743\u5931\u8D25\u9875\u9762\u5730\u5740
-attend.login.pcFailUrl=https://f.10086.cn/s/rcskq/satdc/rcspc/html/Failure_of_authentication.html
+attend.login.pcFailUrl=http://reportapproval.vipgz1.idcfengye.com/s/rcskq/satdc/rcspc/html/Failure_of_authentication.html
 #rcs PC\u7AEF\u7BA1\u7406\u540E\u53F0\u9274\u6743\u6210\u529F\u8DF3\u8F6C\u9875\u9762\u5730\u5740
-#attend.login.pcSuccessUrl=http://f.10086.cn/s/rcskq/satdc/rcspc/html/attend_stats.html
-attend.login.pcSuccessUrl=https://f.10086.cn/s/rcskq/satdc/rcspc/html/attend_detail.html
+#attend.login.pcSuccessUrl=http://reportapproval.vipgz1.idcfengye.com/s/rcskq/satdc/rcspc/html/attend_stats.html
+attend.login.pcSuccessUrl=http://reportapproval.vipgz1.idcfengye.com/s/rcskq/satdc/rcspc/html/attend_detail.html
 
 #\u83B7\u53D6\u6587\u4EF6\u4E0B\u8F7D\u4E34\u65F6\u57FA\u7840\u76EE\u5F55
 attend.download.file.dir=/data/rcs/appsys/downLoadTempFile/
 
 #\u83B7\u53D6\u6587\u4EF6\u4E0B\u8F7D\u63A5\u53E3\u670D\u52A1\u7684URL\u5730\u5740
-attend.download.serverUrl=https://f.10086.cn/s/rcskq/atdc/downLoad/downLoadAttendRept?
+attend.download.serverUrl=http://reportapproval.vipgz1.idcfengye.com/s/rcskq/atdc/downLoad/downLoadAttendRept?
 
 #\u83B7\u53D6\u6BCF\u6B21\u6279\u91CF\u751F\u6210\u7684\u5F85\u53D1\u6D88\u606F\u6570\uFF08\u9ED8\u8BA4100\uFF09
 attendance.generate.msg.splitSize=100
 
 #\u63A8\u9001\u7684\u8BA4\u8BC1\u9875\u9762
-attendance.rcs.msg.details.pageurl= https://f.10086.cn/s/rcskq/atdc/login/ssoAttendance
+attendance.rcs.msg.details.pageurl= http://reportapproval.vipgz1.idcfengye.com/s/rcskq/atdc/login/ssoAttendance
 #\u5BA1\u6279\u6D88\u606F\u63A8\u9001\u8DF3\u8F6Curl
-attend.login.approveUrl = https://f.10086.cn/s/rcskq/satdc/rcs/index.html#/exceptionAppealDetail
+attend.login.approveUrl = http://reportapproval.vipgz1.idcfengye.com/s/rcskq/satdc/rcs/index.html#/exceptionAppealDetail
 #\u56E2\u961F\u65E5\u62A5\u6D88\u606F\u63A8\u9001\u8DF3\u8F6Curl
-attend.login.dailyUrl = https://f.10086.cn/s/rcskq/satdc/rcs/index.html#/statistics
+attend.login.dailyUrl = http://reportapproval.vipgz1.idcfengye.com/s/rcskq/satdc/rcs/index.html#/statistics
 #\u7EDF\u8BA1\u7EBF\u7A0B\u6570
 attendance.statistics.threaded.number = 20
 
@@ -103,11 +103,11 @@ attendance.rcs.msg.send.url=http://120.196.212.5/rcsoaplus-gateway/message/sendB
 attend.maxExportCount=60000
 
 #\u6CE8\u518C\u4F01\u4E1A\u901A\u8BAF\u5F55\u56DE\u8C03
-attend.qytxl.callbackUrl=https://f.10086.cn/s/rcskq/atdc/sync/getRegisterCallBackInfo
+attend.qytxl.callbackUrl=http://reportapproval.vipgz1.idcfengye.com/s/rcskq/atdc/sync/getRegisterCallBackInfo
 
 #\u751F\u4EA7
-attend.qytxl.appid=d7eec29775ca42a894ab3ce432667e70
-attend.qytxl.appkey=ca7dc22b57fa45a7a6a8eb89a3dc7b49
+attend.qytxl.appkey=d7eec29775ca42a894ab3ce432667e70
+attend.qytxl.appsecret=ca7dc22b57fa45a7a6a8eb89a3dc7b49
 attend.qytxl.aes_key=ca7dc22b57fa45a7
 
 #\u6D4B\u8BD5
