--- a/richinfo-biz-attendance/rh-attendanceweb/src/main/resources/local.properties
+++ b/richinfo-biz-attendance/rh-attendanceweb/src/main/resources/local.properties
@@ -7,5 +7,11 @@ is_use_db=1
 #configdir=/data/rcs/appsys/attendcfg/
 #is_use_db=1
 
+# \u751F\u4EA7
+#configdir=/data/RCS/appSys/attendcfg
+#is_use_db=1
+##\u76D1\u63A7\u65E5\u5FD7\u6253\u5370\u9600\u503C\uFF0C\u9ED8\u8BA410ms
+moniterlog.monitorLogThreshold=10
+
 
 
