--- a/richinfo-biz-attendance/rh-attendanceweb/src/main/resources/local.properties
+++ b/richinfo-biz-attendance/rh-attendanceweb/src/main/resources/local.properties
@@ -1,5 +1,5 @@
 # \u672C\u5730
-configdir=C:\\javaDev\\idea_repository\\richinfo-biz-attendance-syn\\source\\richinfo-biz-attendance\\MyConfigDirTest
+configdir=D:\\work\\work\\project\\newActive\\source\\richinfo-biz-attendance\\MyConfigDirTest
 is_use_db=1
 #sms_clock_url = ttps://120.196.212.78:8080/satdc/rcs/index.html
 
