--- a/richinfo-biz-attendance/MyConfigDirTest/bcomponet.properties
+++ b/richinfo-biz-attendance/MyConfigDirTest/bcomponet.properties
@@ -1,5 +1,5 @@
 #\u8003\u52E4\u7CFB\u7EDFmemcache\u7F13\u5B58\u670D\u52A1\u914D\u7F6E
-cache.mail.serveriplist=127.0.0.1 11211
+cache.mail.serveriplist=192.168.2.2:11211
 cache.mail.read.timeout=3000
 cache.mail.connect.timeout=3000
 cache.mail.max.idleTime=1800000
