更改从配置文件获取短信secretId/secretKey

--- a/richinfo-biz-attendance/MyConfigDirTest/attendance.properties
+++ b/richinfo-biz-attendance/MyConfigDirTest/attendance.properties
@@ -119,3 +119,7 @@ attend.qytxl.aes_key=ca7dc22b57fa45a7
 #\u6253\u5361\u63D0\u9192
 #attendance.hfx.msg.remindTime= 10 * 60 * 1000L
 msg.pull.type=\u6D4B\u8BD5--
+
+#\u77ED\u4FE1secretId/secretKey
+attend.qytxl.secretId=7g7lXzVS55nJv
+attend.qytxl.secretKey=EPRpv8IWpIPQSj1V24ZVS55nJv
