--- a/richinfo-biz-attendance/rh-attendanceweb/pom.xml
+++ b/richinfo-biz-attendance/rh-attendanceweb/pom.xml
@@ -145,6 +145,13 @@
             <artifactId>jboss-websocket-api_1.1_spec</artifactId>
             <version>1.1.0.Final</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
