长短短信:关闭短信创建功能,修复短短信字符串替换问题,将短信模板Id属性值移至配置文件

--- a/richinfo-biz-attendance/MyConfigDirTest/attendance.properties
+++ b/richinfo-biz-attendance/MyConfigDirTest/attendance.properties
@@ -123,3 +123,7 @@ msg.pull.type=\u6D4B\u8BD5--
 #\u77ED\u4FE1secretId/secretKey
 attend.qytxl.secretId=7g7lXzVS55nJv
 attend.qytxl.secretKey=EPRpv8IWpIPQSj1V24ZVS55nJv
+
+#¶ÌÐÅTEMPLATE_ID/GET_OF_WORK_TEMPLATE_ID
+attend.qytxl.templateId=0x201901
+attend.qytxl.getOfWorkTemplateId=0x201902
