优化一些log，使配置与生产线的配置的顺序尽量保持一致

--- a/richinfo-biz-attendance/MyConfigDirTest/attendance.properties
+++ b/richinfo-biz-attendance/MyConfigDirTest/attendance.properties
@@ -1,37 +1,21 @@
-##\u5355\u70B9\u767B\u5F55\u9274\u6743\u5730\u5740
-#attend.validArtifact.url=http://121.15.167.251:10010/UmcWeb/s?func=ArtifactCheckRequest
-attend.validArtifact.url=http://auth.cmpassport.com:6500/UmcWeb/s?func=ArtifactCheckRequest
 ##\u767B\u5F55\u6210\u529F\u8DF3\u8F6C\u5730\u5740
 attend.login.successUrl=http://reportapproval.vipgz1.idcfengye.com/s/rcskq/satdc/rcs/index.html
 ##\u767B\u5F55\u5931\u8D25\u8DF3\u8F6C\u5730\u5740
 attend.login.failUrl=http://reportapproval.vipgz1.idcfengye.com/s/rcskq/satdc/rcs/authFail.html
-##\u77ED\u4FE1\u6253\u5361\u8DF3\u8F6C\u5730\u5740
-attend.sms.clock.Url=http://reportapproval.vipgz1.idcfengye.com/s/rcskq/satdc/rcs/index.html
-##sms\u767B\u5F55\u624B\u673A\u53F7\u89E3\u5BC6\u79D8\u94A5
-attend.sms.token.phone.secret=hHMogstx1gcJQLcu
 ##\u767B\u5F55\u4F1A\u8BDD\u7F13\u5B58\u65F6\u95F4
 attend.user.cacheTime=7200000
-##UMC\u767B\u5F55\u9274\u6743\u5730\u5740
-#attend.umc.url=https://wap.cmpassport.com:8443/api/tokenValidate
-##RCS\u7BA1\u7406\u5458\u6821\u9A8C\u63A5\u53E3\u5730\u5740
-#attend.rcs.checkadmin.url=http://117.136.240.59/rcsoa_receive/validate/isAdmin.do
 
-##pc\u83B7\u53D6\u51ED\u8BC1\u767B\u9646\u901A\u8BAF\u5F55
-#attend.getArtifact.url=http://121.15.167.251:10010/UmcWeb/s?func=GetArtifactRequest
+##UMC\u767B\u5F55\u9274\u6743\u5730\u5740
+##attend.umc.url=https://wap.cmpassport.com:8443/api/tokenValidate
 
 # \u83B7\u53D6\u5DF2\u7ECF\u914D\u7F6E\u8282\u5047\u65E5\u4FE1\u606F\u7684\u5E74\u4EFD\uFF0C\u591A\u4E2A\u5E74\u4EFD\uFF0C\u9017\u53F7(,)\u5206\u9694\uFF0C\u683C\u5F0FYYYY
 calender.config.year=2017,2018,2019
 
 # \u83B7\u53D6\u5373\u5C06\u4FDD\u5B58\u7684\u65E5\u5386\u4FE1\u606F\u7684\u5E74\u4EFD\uFF0C\u5355\u4E2A\u5E74\u4EFD\uFF0C\u683C\u5F0FYYYY
 calender.save.year=2019
-attendance.rcs.consumerKey=101
-attendance.rcs.consumerSecret=0d324f614e88ebb4ab6c6b87b8f7cc0a
-attendance.rcs.appId=92
-attendance.rcs.appSecret=k5x369ato282pl8XfEUh8NQHNu7k549N
-attendance.rcs.accessNo=125600400000053
 
 # \u83B7\u53D6\u8BE5\u5E74\u4EFD\u5468\u672B\u7684\u65E5\u671F\u5217\u8868\uFF0C\u6392\u9664\u4E0E\u8282\u5047\u65E5\u91CD\u590D\u7684\u5468\u672B\u3002eg:2017-06-10,2017-06-11
-calender.weekend.2017=2017-01-07,2017-01-08,2017-01-14,2017-01-15,2017-01-21,2017-01-22,2017-02-04,2017-02-05,2017-02-11,2017-02-12,2017-02-18,2017-02-19,2017-02-25,2017-02-26,2017-03-04,2017-03-05,2017-03-11,2017-03-12,2017-03-18,2017-03-19,2017-03-25,2017-03-26,2017-04-08,2017-04-09,2017-04-15,2017-04-16,2017-04-22,2017-04-23,2017-05-06,2017-05-07,2017-05-13,2017-05-14,2017-05-20,2017-05-21,2017-06-03,2017-06-04,2017-06-10,2017-06-11,2017-06-17,2017-06-18,2017-06-24,2017-06-25,2017-07-01,2017-07-02,2017-07-08,2017-07-09,2017-07-15,2017-07-16,2017-07-22,2017-07-23,2017-07-29,2017-07-30,2017-08-05,2017-08-06,2017-08-12,2017-08-13,2017-08-26,2017-08-27,2017-09-02,2017-09-03,2017-09-09,2017-09-10,2017-09-16,2017-09-17,2017-09-23,2017-09-24,2017-10-14,2017-10-15,2017-10-21,2017-10-22,2017-10-28,2017-10-29,2017-11-04,2017-11-05,2017-11-11,2017-11-12,2017-11-18,2017-11-19,2017-11-25,2017-11-26,2017-12-02,2017-12-03,2017-12-09,2017-12-10,2017-12-16,2017-12-17,2017-12-23,2017-12-24,2017-12-30,2017-12-31
+calender.weekend.2017=2017-01-07,2017-01-08,2017-01-14,2017-01-15,2017-01-21,2017-01-22,2017-02-04,2017-02-05,2017-02-11,2017-02-12,2017-02-18,2017-02-19,2017-02-25,2017-02-26,2017-03-04,2017-03-05,2017-03-11,2017-03-12,2017-03-18,2017-03-19,2017-03-25,2017-03-26,2017-04-08,2017-04-09,2017-04-15,2017-04-16,2017-04-22,2017-04-23,2017-05-06,2017-05-07,2017-05-13,2017-05-14,2017-05-20,2017-05-21,2017-06-03,2017-06-04,2017-06-10,2017-06-11,2017-06-17,2017-06-18,2017-06-24,2017-06-25,2017-07-01,2017-07-02,2017-07-08,2017-07-09,2017-07-15,2017-07-16,2017-07-22,2017-07-23,2017-07-29,2017-07-30,2017-08-05,2017-08-06,2017-08-12,2017-08-13,2017-08-19,2017-08-20,2017-08-26,2017-08-27,2017-09-02,2017-09-03,2017-09-09,2017-09-10,2017-09-16,2017-09-17,2017-09-23,2017-09-24,2017-10-14,2017-10-15,2017-10-21,2017-10-22,2017-10-28,2017-10-29,2017-11-04,2017-11-05,2017-11-11,2017-11-12,2017-11-18,2017-11-19,2017-11-25,2017-11-26,2017-12-02,2017-12-03,2017-12-09,2017-12-10,2017-12-16,2017-12-17,2017-12-23,2017-12-24,2017-12-30,2017-12-31
 
 # \u83B7\u53D6\u8BE5\u5E74\u4EFD\u6CD5\u5B9A\u8282\u5047\u65E5\u7684 \u65E5\u671F-\u5047\u65E5 \u5217\u8868\uFF0C\u9017\u53F7(,)\u5206\u9694\u3002eg:2017-05-28:\u7AEF\u5348\u8282,2017-05-29:\u7AEF\u5348\u8282
 calender.holiday.2017=2017-01-01:\u5143\u65E6,2017-01-02:\u5143\u65E6,2017-01-27:\u6625\u8282,2017-01-28:\u6625\u8282,2017-01-29:\u6625\u8282,2017-01-30:\u6625\u8282,2017-01-31:\u6625\u8282,2017-02-01:\u6625\u8282,2017-02-02:\u6625\u8282,2017-04-02:\u6E05\u660E\u8282,2017-04-03:\u6E05\u660E\u8282,2017-04-04:\u6E05\u660E\u8282,2017-04-29:\u52B3\u52A8\u8282,2017-04-30:\u52B3\u52A8\u8282,2017-05-01:\u52B3\u52A8\u8282,2017-05-28:\u7AEF\u5348\u8282,2017-05-29:\u7AEF\u5348\u8282,2017-05-30:\u7AEF\u5348\u8282,2017-10-01:\u56FD\u5E86\u8282,2017-10-02:\u56FD\u5E86\u8282,2017-10-03:\u56FD\u5E86\u8282,2017-10-04:\u4E2D\u79CB\u8282,2017-10-05:\u56FD\u5E86\u8282,2017-10-06:\u56FD\u5E86\u8282,2017-10-07:\u56FD\u5E86\u8282,2017-10-08:\u56FD\u5E86\u8282
@@ -45,11 +29,11 @@ calender.weekend.2018=2018-01-06,2018-01-07,2018-01-13,2018-01-14,2018-01-20,201
 #2019\u5E74\u6CD5\u5B9A\u8282\u5047\u65E5\u7684 \u65E5\u671F-\u5047\u65E5 \u5217\u8868\uFF0C\u9017\u53F7(,)\u5206\u9694\u3002eg:2019-01-01:\u5143\u65E6,2019-02-04:\u9664\u5915
 calender.holiday.2019=2019-01-01:\u5143\u65E6,2019-02-04:\u9664\u5915,2019-02-05:\u6625\u8282,2019-02-06:\u6625\u8282,2019-02-07:\u6625\u8282,2019-02-08:\u6625\u8282,2019-02-09:\u6625\u8282,2019-02-10:\u6625\u8282,2019-04-05:\u6E05\u660E\u8282,2019-04-06:\u6E05\u660E\u8282,2019-04-07:\u6E05\u660E\u8282,2019-04-29:\u52B3\u52A8\u8282,2019-04-30:\u52B3\u52A8\u8282,2019-05-01:\u52B3\u52A8\u8282,2019-06-07:\u7AEF\u5348\u8282,2019-06-08:\u7AEF\u5348\u8282,2019-06-09:\u7AEF\u5348\u8282,2019-09-13:\u4E2D\u79CB\u8282,2019-09-14:\u4E2D\u79CB\u8282,2019-09-15:\u4E2D\u79CB\u8282,2019-10-01:\u56FD\u5E86\u8282,2019-10-02:\u56FD\u5E86\u8282,2019-10-03:\u56FD\u5E86\u8282,2019-10-04:\u56FD\u5E86\u8282,2019-10-05:\u56FD\u5E86\u8282,2019-10-06:\u56FD\u5E86\u8282,2019-10-07:\u56FD\u5E86\u8282
 
-#2019\u5E74\u4EFD\u5468\u672B\u7684\u65E5\u671F\u5217\u8868\uFF0C\u6392\u9664\u4E0E\u8282\u5047\u65E5\u91CD\u590D\u7684\u5468\u672B\u3002
+#2019\u5E74\u4EFD\u5468\u672B\u7684\u65E5\u671F\u5217\u8868\uFF0C\u6392\u9664\u4E0E\u8282\u5047\u65E5\u91CD\u590D\u7684\u5468\u672B\u3002eg:
 calender.weekend.2019=2019-01-05,2019-01-06,2019-01-12,2019-01-13,2019-01-19,2019-01-20,2019-01-26,2019-01-27,2019-02-16,2019-02-17,2019-02-23,2019-02-24,2019-03-02,2019-03-03,2019-03-09,2019-03-10,2019-03-16,2019-03-17,2019-03-23,2019-03-24,2019-03-30,2019-03-31,2019-04-13,2019-04-14,2019-04-20,2019-04-21,2019-05-04,2019-05-05,2019-05-11,2019-05-12,2019-05-18,2019-05-19,2019-05-25,2019-05-26,2019-06-01,2019-06-02,2019-06-15,2019-06-16,2019-06-22,2019-06-23,2019-06-29,2019-06-30,2019-07-06,2019-07-07,2019-07-13,2019-07-14,2019-07-20,2019-07-21,2019-07-27,2019-07-28,2019-08-03,2019-08-04,2019-08-10,2019-08-11,2019-08-17,2019-08-18,2019-08-24,2019-08-25,2019-08-31,2019-09-01,2019-09-07,2019-09-08,2019-09-21,2019-09-22,2019-09-28,2019-10-13,2019-10-19,2019-10-20,2019-10-26,2019-10-27,2019-11-02,2019-11-03,2019-11-09,2019-11-10,2019-11-16,2019-11-17,2019-11-23,2019-11-24,2019-11-30,2019-12-01,2019-12-07,2019-12-08,2019-12-14,2019-12-15,2019-12-21,2019-12-22,2019-12-28,2019-12-29
 
 #2019\u5E74\u6CD5\u5B9A\u8282\u5047\u65E5\u8865\u73ED\u65E5\u671F\u5217\u8868
-calender.rowday.2019=2019-02-02,2019-02-03,2019-09-29,2019-10-12,2019-01-24,2019-01-27,2019-01-26
+calender.rowday.2019=2019-02-02,2019-02-03,2019-09-29,2019-10-12,2019-04-28,2019-05-05
 
 # \u5224\u65AD\u975E\u5DE5\u4F5C\u65E5\u662F\u5426\u4F7F\u7528\u9ED8\u8BA4\u7684\u5907\u6CE8\u63CF\u8FF0\u30020\uFF1A\u4E0D\u4F7F\u7528\uFF1B1\uFF1A\u4F7F\u7528
 calender.restday.default.remark=0
@@ -57,73 +41,100 @@ calender.restday.default.remark=0
 # \u6267\u884C\u5B9A\u65F6\u4EFB\u52A1\u7684\u673A\u5668\u3002\u9ED8\u8BA4\u503C\u4E3A0\uFF0C\u4E0D\u6267\u884C\uFF1B\u5B9A\u65F6\u4EFB\u52A1\u673A\u5668\uFF0C\u914D\u503C\u4E3A1\uFF0C\u4EC5\u4E00\u53F0\u673A\u5668\u9700\u914D\u7F6E
 attendance.task.server=1
 
-# id list
-attendance.eid.list=,483460,36301,508661,514165,7347117,
-##\u62A5\u8868\u5BFC\u51FA\u6587\u4EF6\u4E34\u65F6\u5B58\u50A8\u8DEF\u5F84
-attend.export.file.dir=/data/rcs/appsys/exportTempFile/
-##\u8003\u52E4\u8F6F\u786C\u7ED3\u5408\u5E94\u7528\u8054\u8C03\u6D4B\u8BD5\u4F01\u4E1Akey
-attend.hardkey.483460=97d99d8143744510a8f468ebb1d63c22
+# \u7BA1\u7406\u5458id-list
+##attendance.eid.list=,483460,675295,2275878,2335060,2276259,675231,675715,2337521,2269178,2268691,2269403,675414,2337568,2337945,2351815,2337502,2345296,2179090,2370182,2371296,643998,2307015,2377675,643999,2275859,2275858,2275848,2276061,2436330,2276040,2276046,2276069,2276697,2276503,2276600,2276524,2276279,2275973,2276157,2276666,2276356,2276319,2276349,2275983,2275901,2276471,
+attendance.eid.list=,483460,BA139E52FA0D33D870EBCBD856F976D6,A4B0669079B73AC1D277D35195DFB29E,3D7AF23F6AE6F2832E4A9E61C206CD52,AA25D3F96F512B972925BC60090F0F05,B167F31F2719A9C7AEA52B66951FDF3F,9C85C43C7569C22D8B1A99AB8624FD41,14D3FF20A75529E4706DC36F29B4DD1C,E61EB578F581CAF2D2177094205722C5,168A2B2B439F41A9A278F8F0B684F702,1595E21E4DBE0CE0395DA3B9FDD0CB1E,3DBF70B4F5FDE48D4AD52DD967BDAA90,873E958D766D2312BC767AAD48729EFF,0AAF2F55696E032F9D7597E3BA32BCF5,2D17962DDF0E9A8E0420F2B46B4C59E0,C733B804988EA7DB82A1BDDD861E7450,9E0EA6EA3081E6CD3B9BBC9E391C1006,B1343ADE819A9C36A07555157E37FB13,FB7F48F6CB5D5E7B58CC7F2FA74D2BE5,72469BA820AFD138C37D179C4D9EDD09,DC9A6D8E027AC69F39AA094BCBAC3AD5,02A516ACE9D66B7C2A14E2B7F3155F9F,73F97E36EBE028B027001EA220C526EB,EA8F924439850D8BB4871FDE32615230,C579A906FFCDFEF339536737573D40D2,AC7B1AC580A664796B3CEC0FDB45E85D,E4745EC9B91623FF41F6F4A880D27A3A,4BEE6542B8AF40DFD6B569E60CA5D502,0B1BE443AB3E177B3B2EFC1769F1F8A6,F2754AFAD18BC0120DADB162F101F59A,B398B8AFBC89FE8579B202AC6992EA8E,8F5F775CBBB5E2A6E07ADBECBA27289F,82A72ADD496932E24F143A2E0DEE8F13,7BF9B8E32660D3D791161367A178AB8E,7E56A23CADC5D357A4BA6DB02BB23735,7BF9B8E32660D3D791161367A178AB8E,7BF9B8E32660D3D791161367A178AB8E,7BF9B8E32660D3D791161367A178AB8E,1CFD0570DE2310B91349759E4A875436,97A75BE6AAE88528F4D16818DF0C0452,A2E8D1CC7192C6EE28A50D1386EFF00E,6246E94D1F04319A76160E4E8CB8BFF3,
 
-#rcs PC\u7AEF\u7BA1\u7406\u540E\u53F0\u9274\u6743\u5931\u8D25\u9875\u9762\u5730\u5740
-attend.login.pcFailUrl=http://reportapproval.vipgz1.idcfengye.com/s/rcskq/satdc/rcspc/html/Failure_of_authentication.html
-#rcs PC\u7AEF\u7BA1\u7406\u540E\u53F0\u9274\u6743\u6210\u529F\u8DF3\u8F6C\u9875\u9762\u5730\u5740
+##\u62A5\u8868\u5BFC\u51FA\u6587\u4EF6\u4E34\u65F6\u5B58\u50A8\u8DEF\u5F84
+attend.export.file.dir=/data/RCS/appSys/exportTempFile/
+##\u7EDF\u4E00\u8BA4\u8BC1\u63A5\u53E3\u5730\u5740
+##attend.umc.url=https://10.200.1.22:8443/api/tokenValidate
+
+
+#PC\u7AEF\u5355\u70B9\u767B\u5F55token\u6821\u9A8C
+attend.validArtifact.url=http://auth.cmpassport.com:6500/UmcWeb/s?func=ArtifactCheckRequest
+#\u7EDF\u4E00\u8BA4\u8BC1sourceID,\u539F\u5219\u4E0A\u9996\u5148\u4ECE\u5355\u70B9\u8FC7\u6765\u7684\u53C2\u6570\u4E2D\u83B7\u53D6\uFF0C\u6CA1\u6709\u5219\u53D6\u8BE5\u9ED8\u8BA4\u503C
+attend.umc.sourceid=001069
+#WEB\u5355\u70B9\u767B\u5F55token\u6821\u9A8C\u6210\u529F\u7684\u8DF3\u8F6C\u5730\u5740
 #attend.login.pcSuccessUrl=http://reportapproval.vipgz1.idcfengye.com/s/rcskq/satdc/rcspc/html/attend_stats.html
 attend.login.pcSuccessUrl=http://reportapproval.vipgz1.idcfengye.com/s/rcskq/satdc/rcspc/html/attend_detail.html
-
+#WEB\u5355\u70B9\u767B\u5F55token\u6821\u9A8C\u5931\u8D25\u7684\u8DF3\u8F6C\u5730\u5740
+attend.login.pcFailUrl=http://reportapproval.vipgz1.idcfengye.com/s/rcskq/satdc/rcspc/html/Failure_of_authentication.html
 #\u83B7\u53D6\u6587\u4EF6\u4E0B\u8F7D\u4E34\u65F6\u57FA\u7840\u76EE\u5F55
-attend.download.file.dir=/data/rcs/appsys/downLoadTempFile/
-
+attend.download.file.dir=/data/RCS/appSys/downLoadTempDir/
+#\u6309\u5C0F\u65F6\u5220\u9664\u4E34\u65F6\u6587\u4EF6\u65F6\uFF0C\u4E0E\u5F53\u524D\u65F6\u95F4\u76F8\u9694\u7684\u5C0F\u65F6\u5185\u90FD\u4E0D\u4F1A\u8FDB\u884C\u5220\u9664\uFF0C\u8868\u793A\u4E0E\u5F53\u524D\u65F6\u95F4\u7684\u5C0F\u65F6\u95F4\u9694
+attend.downLoadDelDiffHours=2
+#\u4E00\u6B21\u5BFC\u51FA\u7684\u6700\u5927\u6570\u636E\u91CF
+attend.maxExportCount=60000
 #\u83B7\u53D6\u6587\u4EF6\u4E0B\u8F7D\u63A5\u53E3\u670D\u52A1\u7684URL\u5730\u5740
 attend.download.serverUrl=http://reportapproval.vipgz1.idcfengye.com/s/rcskq/atdc/downLoad/downLoadAttendRept?
 
-#\u83B7\u53D6\u6BCF\u6B21\u6279\u91CF\u751F\u6210\u7684\u5F85\u53D1\u6D88\u606F\u6570\uFF08\u9ED8\u8BA4100\uFF09
-attendance.generate.msg.splitSize=100
 
-#\u63A8\u9001\u7684\u8BA4\u8BC1\u9875\u9762
-attendance.rcs.msg.details.pageurl= http://reportapproval.vipgz1.idcfengye.com/s/rcskq/atdc/login/ssoAttendance
-#\u5BA1\u6279\u6D88\u606F\u63A8\u9001\u8DF3\u8F6Curl
-attend.login.approveUrl = http://reportapproval.vipgz1.idcfengye.com/s/rcskq/satdc/rcs/index.html#/exceptionAppealDetail
-#\u56E2\u961F\u65E5\u62A5\u6D88\u606F\u63A8\u9001\u8DF3\u8F6Curl
-attend.login.dailyUrl = http://reportapproval.vipgz1.idcfengye.com/s/rcskq/satdc/rcs/index.html#/statistics
-#\u7EDF\u8BA1\u7EBF\u7A0B\u6570
-attendance.statistics.threaded.number = 20
 
+#\u83B7\u53D6\u5F53\u524D\u673A\u5668\u7F16\u53F7\uFF08\u7528\u4E8E\u626B\u63CF\u5F85\u53D1\u6D88\u606F\u8868\uFF09
+attendance.current.serverNo=0
+#\u521B\u65B0\u5E73\u53F0\u6D88\u606F\u63A8\u9001\u63A5\u53E3consumerKey
+attendance.rcs.consumerKey=101
+#\u521B\u65B0\u5E73\u53F0\u6D88\u606F\u63A8\u9001\u63A5\u53E3consumerSecret
+attendance.rcs.consumerSecret=0d324f614e88ebb4ab6c6b87b8f7cc0a
+#\u521B\u65B0\u5E73\u53F0\u6D88\u606F\u63A8\u9001\u63A5\u53E3appId
+attendance.rcs.appId=92
+#\u521B\u65B0\u5E73\u53F0\u6D88\u606F\u63A8\u9001\u63A5\u53E3appSecret
+attendance.rcs.appSecret=k5x369ato282pl8XfEUh8NQHNu7k549N
+#\u83B7\u53D6\u521B\u65B0\u5E73\u53F0\u6D88\u606F\u63A8\u9001\u63A5\u53E3\u63A5\u5165\u7801
+attendance.rcs.accessNo=125600400000053
 #\u83B7\u53D6\u521B\u65B0\u5E73\u53F0\u6D88\u606Ftoken\u7533\u8BF7\u63A5\u53E3\u7684\u8C03\u7528\u5730\u5740
 attendance.rcs.msg.accessToken.url=http://120.196.212.5/rcsoaplus-gateway/message/token		           
 #\u83B7\u53D6\u521B\u65B0\u5E73\u53F0\u6D88\u606F\u63A8\u9001\u63A5\u53E3\u7684\u8C03\u7528\u5730\u5740
 attendance.rcs.msg.send.url=http://120.196.212.5/rcsoaplus-gateway/message/sendByEuserId
 #\u83B7\u53D6\u6D88\u606F\u8DF3\u8F6C\u8BE6\u60C5\u9875\u5730\u5740
-#attendance.rcs.msg.details.pageurl=http://120.197.235.114/atdc/login/ssoAttendance
-#attend.smtp.server=smtp.163.com
-#attend.sendMail.from=zfq0816@163.com
-#attend.sendMail.user=zfq0816@163.com
-#attend.sendMail.pwd=zfq15016629733
+attendance.rcs.msg.details.pageurl=http://reportapproval.vipgz1.idcfengye.com/s/rcskq/atdc/login/ssoAttendance
+#\u5BA1\u6279\u6D88\u606F\u63A8\u9001\u8DF3\u8F6Curl
+attend.login.approveUrl = http://reportapproval.vipgz1.idcfengye.com/s/rcskq/satdc/rcs/index.html#/exceptionAppealDetail
+#\u56E2\u961F\u65E5\u62A5\u6D88\u606F\u63A8\u9001\u8DF3\u8F6Curl
+attend.login.dailyUrl = http://reportapproval.vipgz1.idcfengye.com/s/rcskq/satdc/rcs/index.html#/statistics
 
-#\u8003\u52E4\u6253\u5361\u5BFC\u51FA\u884C\u6570\u9650\u5236
-attend.maxExportCount=60000
-
-#\u6CE8\u518C\u4F01\u4E1A\u901A\u8BAF\u5F55\u56DE\u8C03
-attend.qytxl.callbackUrl=http://reportapproval.vipgz1.idcfengye.com/s/rcskq/atdc/sync/getRegisterCallBackInfo
-
-#\u751F\u4EA7
-attend.qytxl.appkey=d7eec29775ca42a894ab3ce432667e70
-attend.qytxl.appsecret=ca7dc22b57fa45a7a6a8eb89a3dc7b49
+# 2018-06-22\u53D8\u66F4
+##\u8D1F\u4E00\u5C4F\uFF1A\u4F01\u4E1A\u901A\u8BAF\u5F55\u6CE8\u518C-appid
+attend.qytxl.appid=d7eec29775ca42a894ab3ce432667e70
+##\u8D1F\u4E00\u5C4F\uFF1A\u4F01\u4E1A\u901A\u8BAF\u5F55\u6CE8\u518C-app_key
+attend.qytxl.appkey=ca7dc22b57fa45a7a6a8eb89a3dc7b49
+##\u8D1F\u4E00\u5C4F\uFF1A\u4F01\u4E1A\u901A\u8BAF\u5F55AES-KEY
 attend.qytxl.aes_key=ca7dc22b57fa45a7
-
 #\u6D4B\u8BD5
 #attend.qytxl.appid=2b5aa5bbace54212b5036640db943db0
 #attend.qytxl.appkey=258e5059518c4f56a56658d7172d29c5
 #attend.qytxl.aes_key=258e5059518c4f56
+##\u4F01\u4E1A\u901A\u8BAF\u5F55\u6CE8\u518C\u56DE\u8C03URL
+attend.qytxl.callbackUrl=http://reportapproval.vipgz1.idcfengye.com/s/rcskq/atdc/sync/getRegisterCallBackInfo
 
-#qytxl.department.staff.url=https://open1.cytxl.com.cn/enterprise/getDetail.json
-#\u6253\u5361\u63D0\u9192
-#attendance.hfx.msg.remindTime= 10 * 60 * 1000L
-msg.pull.type=\u6D4B\u8BD5--
+#\u7EDF\u8BA1\u7EBF\u7A0B\u6570
+attendance.statistics.threaded.number = 20
 
-#\u77ED\u4FE1secretId/secretKey
-attend.qytxl.secretId=7g7lXzVS55nJv
-attend.qytxl.secretKey=EPRpv8IWpIPQSj1V24ZVS55nJv
+#\u83B7\u53D6\u6BCF\u6B21\u6279\u91CF\u751F\u6210\u7684\u5F85\u53D1\u6D88\u606F\u6570\uFF08\u9ED8\u8BA4100\uFF09
+attendance.generate.msg.splitSize=100
+##\u8003\u52E4\u8F6F\u786C\u7ED3\u5408\u5E94\u7528\u8054\u8C03\u6D4B\u8BD5\u4F01\u4E1Akey
+#attend.hardkey.483460=97d99d8143744510a8f468ebb1d63c22
+##\u77ED\u4FE1\u6253\u5361\u8DF3\u8F6C\u5730\u5740
+attend.sms.clock.Url=http://reportapproval.vipgz1.idcfengye.com/s/rcskq/satdc/rcs/index.html
+##sms\u767B\u5F55\u624B\u673A\u53F7\u89E3\u5BC6\u79D8\u94A5
+attend.sms.token.phone.secret=hHMogstx1gcJQLcu
 
-#¶ÌÐÅTEMPLATE_ID/GET_OF_WORK_TEMPLATE_ID
-attend.qytxl.templateId=0x201901
-attend.qytxl.getOfWorkTemplateId=0x201902
+#\u5982\u679C\u662F\u521B\u5EFA\u6216\u7F16\u8F91\u8003\u52E4\u7EC4\uFF0C\u5219\u8BBE\u7F6E\u7684\u6253\u5361\u65F6\u95F4\u662F\u591A\u4E45\u4E4B\u540E\u7684\u624D\u6267\u884C\uFF0C\u5355\u4F4D\u662F\u6BEB\u79D2\uFF0C\u9ED8\u8BA4\u662F30\u5206\u949F
+attendance.update.msg.intervalTime=1000
+
+#\u751F\u4EA7\u77ED\u4FE1secretId/secretKey
+attend.qytxl.secretId=KBvMyuuljsRY6
+attend.qytxl.secretKey=3r3J8Sfi5j5Y1DUMeFlPljsRY6
+
+#\u751F\u4EA7\u77ED\u4FE1TEMPLATE_ID/GET_OF_WORK_TEMPLATE_ID
+attend.qytxl.templateId=2386655
+attend.qytxl.getOfWorkTemplateId=2386657
+
+#\u6D4B\u8BD5\u77ED\u4FE1secretId/secretKey
+#attend.qytxl.secretId=7g7lXzVS55nJv
+#attend.qytxl.secretKey=EPRpv8IWpIPQSj1V24ZVS55nJv
+
+#\u6D4B\u8BD5\u77ED\u4FE1TEMPLATE_ID/GET_OF_WORK_TEMPLATE_ID
+#attend.qytxl.templateId=1801995
+#attend.qytxl.getOfWorkTemplateId=1801997
