统一通讯录appkey、appsecret的叫法

--- a/richinfo-biz-attendance/MyConfigDirTest/attendance.properties
+++ b/richinfo-biz-attendance/MyConfigDirTest/attendance.properties
@@ -95,15 +95,16 @@ attend.login.approveUrl = http://reportapproval.vipgz1.idcfengye.com/s/rcskq/sat
 attend.login.dailyUrl = http://reportapproval.vipgz1.idcfengye.com/s/rcskq/satdc/rcs/index.html#/statistics
 
 # 2018-06-22\u53D8\u66F4
-##\u8D1F\u4E00\u5C4F\uFF1A\u4F01\u4E1A\u901A\u8BAF\u5F55\u6CE8\u518C-appid
-attend.qytxl.appid=d7eec29775ca42a894ab3ce432667e70
-##\u8D1F\u4E00\u5C4F\uFF1A\u4F01\u4E1A\u901A\u8BAF\u5F55\u6CE8\u518C-app_key
-attend.qytxl.appkey=ca7dc22b57fa45a7a6a8eb89a3dc7b49
+##\u8D1F\u4E00\u5C4F\uFF1A\u4F01\u4E1A\u901A\u8BAF\u5F55\u6CE8\u518C-appkey
+attend.qytxl.appkey=d7eec29775ca42a894ab3ce432667e70
+##\u8D1F\u4E00\u5C4F\uFF1A\u4F01\u4E1A\u901A\u8BAF\u5F55\u6CE8\u518C-appsecret
+attend.qytxl.appsecret=ca7dc22b57fa45a7a6a8eb89a3dc7b49
 ##\u8D1F\u4E00\u5C4F\uFF1A\u4F01\u4E1A\u901A\u8BAF\u5F55AES-KEY
 attend.qytxl.aes_key=ca7dc22b57fa45a7
+
 #\u6D4B\u8BD5
-#attend.qytxl.appid=2b5aa5bbace54212b5036640db943db0
-#attend.qytxl.appkey=258e5059518c4f56a56658d7172d29c5
+#attend.qytxl.appkey=2b5aa5bbace54212b5036640db943db0
+#attend.qytxl.appsecret=258e5059518c4f56a56658d7172d29c5
 #attend.qytxl.aes_key=258e5059518c4f56
 ##\u4F01\u4E1A\u901A\u8BAF\u5F55\u6CE8\u518C\u56DE\u8C03URL
 attend.qytxl.callbackUrl=http://reportapproval.vipgz1.idcfengye.com/s/rcskq/atdc/sync/getRegisterCallBackInfo
